syntax = "proto3";

package user.v1;

option go_package = "backend/pkg/grpc/gen/user/v1;userv1";

service UserService {
  rpc GetMe(GetMeRequest) returns (GetMeResponse) {}
}

message User {
  string user_id = 1;
  string auth_id = 2;
  string email = 3;
}

message GetMeRequest {}

message GetMeResponse {
  User user = 1;
}
